--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.0.1",
     "react-native-web": "~0.18.9",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
